Update script version to v3 with timestamp for cache debugging

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -960,7 +960,7 @@
         </div>
 
         <script>
-            console.log('DEBUG: StreamSports Custom Script Loaded v2');
+            console.log('DEBUG: StreamSports Custom Script Loaded v3 (Timestamp: ' + new Date().toISOString() + ')');
             window.onerror = function (msg, url, line, col, error) {
                 console.error('DEBUG: GLOBAL JS ERROR:', msg, 'at', line + ':' + col, error);
             };
