--- a/web/public/index.html
+++ b/web/public/index.html
@@ -904,10 +904,12 @@
                         </div>
 
                         <!-- Chromecast -->
-                        <button id="castBtn" onclick="openCastDialog()" title="Cast" style="
-                        width: 32px; height: 32px; border: none; background: transparent;
+                        <button id="castBtn"
+                            onclick="console.log('DEBUG: Cast Button Clicked (Inline)'); openCastDialog()" title="Cast"
+                            style="
+                        width: 32px; height: 32px; border: none; background: transparent; z-index: 20;
                         color: white; cursor: pointer; display: flex; align-items: center; justify-content: center;
-                        transition: transform 0.2s ease;
+                        transition: transform 0.2s ease; position: relative;
                     " onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
@@ -920,9 +922,9 @@
 
                         <!-- PiP -->
                         <button id="pipBtn" onclick="togglePiP()" title="Picture-in-Picture" style="
-                        width: 32px; height: 32px; border: none; background: transparent;
+                        width: 32px; height: 32px; border: none; background: transparent; z-index: 20;
                         color: white; cursor: pointer; display: flex; align-items: center; justify-content: center;
-                        transition: transform 0.2s ease;
+                        transition: transform 0.2s ease; position: relative;
                     " onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
@@ -932,10 +934,12 @@
                         </button>
 
                         <!-- AirPlay -->
-                        <button id="airplayBtn" onclick="toggleAirPlay()" title="AirPlay" style="
-                        width: 32px; height: 32px; border: none; background: transparent;
+                        <button id="airplayBtn"
+                            onclick="console.log('DEBUG: AirPlay Button Clicked (Inline)'); toggleAirPlay()"
+                            title="AirPlay" style="
+                        width: 32px; height: 32px; border: none; background: transparent; z-index: 20;
                         color: white; cursor: pointer; display: flex; align-items: center; justify-content: center;
-                        transition: transform 0.2s ease;
+                        transition: transform 0.2s ease; position: relative;
                     " onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
